--- a/RIK_ESP/data/rik_menu.html
+++ b/RIK_ESP/data/rik_menu.html
@@ -1,13 +1,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="beginCSS.css">
+		<link rel="stylesheet" href="rik_menu_css.css">
 		<title>RIK-3</title>		
 		<script src="jquery-3.2.1.min.js"></script>	
-		<script src="RIK_menu.js"></script>
+		<script src="rik_menu_js.js"></script>
 	</head>
 	<body>	
-		
 		<header>
 			<span>Система управления RIK-3</span>
 		</header>
@@ -19,6 +18,7 @@
 				<div class="block">
 					<p>На данный момент модуль Wi-Fi запущен как</p>
 					<span id="mode"></span>
+					<span id="mode222"></span>
 				</div>
 				<div class="block" id="clientPoint">
 					<p>
