--- a/RIK_ESP/data/start.html
+++ b/RIK_ESP/data/start.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="general.css">
+		<link rel="stylesheet" href="rik_start_css.css">
 		<title>RIK-3</title>		
 		<script src="jquery-3.2.1.min.js"></script>	
-		<script src="RIK_JS.js"></script>
+		<script src="rik_start_js.js"></script>
 	</head>
 	<body>	
 		
@@ -13,7 +13,7 @@
 		</header>
 		<nav>
 			<div>
-				<div style="float: left; width:50%;">
+				<div style="float: left; width:485px;">
 				<span>Введите IP адрес "IP webcam":</span>
 					<input type="textarea" id="inputAddres" name="camAddres" SIZE="40" VALUE="192.168.1.1:8080" style="width: 130px; 
 																									margin:5px; 
