--- a/RIK_ESP/data/rik_screen.html
+++ b/RIK_ESP/data/rik_screen.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="rik_start_css.css">
+		<link rel="stylesheet" href="rik_screen_css.css">
 		<title>RIK-3</title>		
 		<script src="jquery-3.2.1.min.js"></script>	
-		<script src="rik_start_js.js"></script>
+		<script src="rik_screen_js.js"></script>
 	</head>
 	<body>	
 		
@@ -13,14 +13,17 @@
 		</header>
 		<nav>
 			<div>
-				<div style="float: left; width:485px;">
-				<span>Введите IP адрес "IP webcam":</span>
+				<div style=" width:485px;">
+					<span>Введите IP адрес "IP webcam":</span>
 					<input type="textarea" id="inputAddres" name="camAddres" SIZE="40" VALUE="192.168.1.1:8080" style="width: 130px; 
-																									margin:5px; 
+																									margin:5px;
+																									float: left;
+																									margin-left: 15px;
 																									background-color:#90894f;
 																									color: #fff;" maxlength="19">
 				</div>				
-				<div id="agreeIP">Применить</div>					
+				<div id="agreeIP">Применить</div>
+				<div id="setting">НАСТРОЙКИ</div>
 			</div>
 		</nav>
 		<div class="conteiner">		
